@@ -2914,3 +2914,4 @@
 ( cvs diff -u -r 1.179.2.189 -r 1.179.2.190 src/imap.c;  ) > 3.0.1cvs48.patchset
 ( cvs diff -u -r 1.179.2.190 -r 1.179.2.191 src/imap.c;  ) > 3.0.1cvs49.patchset
 ( cvs diff -u -r 1.42.2.35 -r 1.42.2.36 NEWS;  cvs diff -u -r 1.8.2.42 -r 1.8.2.43 README;  cvs diff -u -r 1.1.2.24 -r 1.1.2.25 RELEASE_NOTES;  cvs diff -u -r 1.654.2.2969 -r 1.654.2.2970 configure.ac;  ) > 3.0.2cvs1.patchset
+( cvs diff -u -r 1.207.2.185 -r 1.207.2.186 src/folderview.c;  ) > 3.0.2cvs2.patchset
