@@ -1,3 +1,9 @@
+2007-10-03 [colin]	3.0.2cvs2
+
+	* src/folderview.c
+		Prevent opening folder item while folder
+		is scanned in a better way
+
 2007-10-02 [paul]	3.0.2cvs1
 
 	* NEWS
